# dux

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile  README.html  README.md  README.txt  changelog.md  demo.cc  update-checklist.txt
dux/: CMakeLists.txt  GNUmakefile
dux-demo/: CMakeLists.txt  ctest.c  main.cc
dux/include-priv/dux/: priv  priv.h
dux/include-priv/dux/cxx/: priv.hh
dux/include-private/dux/prv/: dux.h  io.h
dux/include/dux/: arr  arr.h  base  base.h  dux  dux.h  fs  fs.h  io  io.h  math  math.h  media  media.h  mem  mem.h  seq  seq.h  sig  sig.h  str  sysinfo.h  thr.h  thrd  time  time.h
dux/include/dux/c/: arr.h  base.h  io.h  math.h  media.h  mem.h  seq.h  sig.h  str.h  time.h
dux/include/dux/cxx/: arr.hh  base.hh  io.hh  math.hh  media.hh  mem.hh  seq.hh  sig.hh  str.hh  thrd.hh  time.hh
dux/include/dux/str.d/: isalnum.ii  isalpha.ii  iscntrl.ii  isdigit.ii  islower.ii  ispunct.ii  isspace.ii  issurro.ii  isupper.ii  isxdigit.ii  uniblk.ii  uninm.ii
dux/source/dux/: abr.c  envvar.c  errmsg.c  getenv.c
dux/source/fs/: cpy.c  crtdir.c  curdir.c  homdir.c  mov.c  setprm.c
dux/source/io/: cls.c  cpy.c  crt.c  crtdir.c  curdir.c  fil.c  homdir.c  opn.c  red.c  sttpth.c  wrt.c  wrtstr.c
dux/source/io/cxx/: fil.cc
dux/src/: abrt.cc  alloc.cc  crtfile.cc  errcdnm.cc  exit.cc  file.cc  fndchr.cc  free.cc  freernd.cc  getallocsz.cc  getenv.cc  getmainparam.cc  getnummainparams.cc  gettime.cc  ismainthrd.cc  mainparams.cc  memeq.cc  onexit.cc  raise.cc  realloc.cc  rnd.cc  setsighandl.cc  sleep.cc  strcmp.cc  strcpy.cc  strdup.cc  streq.cc  strlen.cc  trap.cc
dux/src/priv/: alloc.cc  assfail.c  cpy.c  curerrcd.c  dbglog.c  dbgunreach.c  dup.c  fill.c  free.cc  geterrnoptr.c  logstderr.c  nomedia.c  plot.c  start.cc  syscall.S
dux/src/priv/posix/: clock_gettime.c  close.c  fsync.c  getpid.c  getrandom.c  kill.c  mmap.c  nanosleep.c  openat.c  read.c  sigaction.c  write.c
include/dux/: algo  algo.hh  arr  arr.hh  base  base.hh  cstr  cstr.hh  io  io.hh  media  media.hh  str  str.hh  sys  sys.hh  thrd  thrd.hh
include/dux/algo.d/: abs.hh  cpy.hh  cpyn.hh  fill.hh  filln.hh  fma.hh  ins.hh  insn.hh  isinf.hh  isnan.hh  isprime.hh  min.hh  mv.hh  mvn.hh  pow.hh  renew.hh  sqrt.hh
include/dux/arr.d/: arr.hh
include/dux/base.d/: opt.hh  tup.hh
include/dux/cstr.d/: cstrcmp.hh  cstrcpy.hh  cstrdup.hh  cstrlen.hh
include/dux/io.d/: dbgprint.hh  fmt.hh  fmter.hh  print.hh
include/dux/str.d/: cnv.hh  isalnum.hh  isalpha.hh  iscntrl.hh  isdigit.hh  islower.hh  ispunct.hh  isspace.hh  issurro.hh  isupper.hh  isxdigit.hh  str.hh  uniblk.hh  uninm.hh
include/dux/sys.d/: _ass.hh  dobj.hh
include/dux/thrd.d/: thrd.hh
src/dux/: _freepthrdhandl.cc  _getpthrdhandl.cc  _pthrdcrt.cc  _pthrdjoin.cc  _setsiginthandl.cc  _siginthandl.cc  _sigtocsig.cc  abrt.cc  endgfx.cc  exit.cc  getenv.cc  goatmaster.cc  initgfx.cc  priv.hh  qexit.cc  raise.cc  sighandl.cc  sleep.cc  trap.cc  unreach.cc  win.cc
